# Advent-Of-Code-2025

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  template.py.template
.circleci/: config.yml
.github/workflows/: badges.yml
src/: aoc.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py
src/utils/: __init__.py  collections.py  contextmanagers.py  decorators.py  exceptions.py  helpers.py  visualisers.py
