[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools", "wheel" ]

[project]
name = "advent-of-code"
version = "2025"
description = "My answers to Advent of Code 2025"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "pytest",
  "rich",
  "typer",
]

optional-dependencies.dev = [
  "black",
  "cogapp",
  "icecream",
  "mypy",
  "pip-tools",
  "pre-commit",
  "pytest-skip-slow",
  "pytest-testmon",
  "pytest-watch",
  "ruff",
  "specialist",
  "uv",
]
urls.homepage = "https://github.com/bengosney/Advent-Of-Code-2025"
urls.repository = "https://github.com/bengosney/Advent-Of-Code-2025"
scripts.advent-of-code = "aoc:app"

[tool.black]
line-length = 128
target-version = [ 'py312' ]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [ "migrations" ]

format.indent-style = "space"
format.quote-style = "double"
format.docstring-code-format = true

lint.select = [ "C90", "E", "F", "FURB", "I", "N", "PERF", "PL", "RUF", "TRY", "UP" ]
lint.ignore = [ "E741", "PLR2004" ]

[tool.pycln]
all = true


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
